# core

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_DB  README.md  application.properties  arch.odp  docker-compose.yml
code_examples/: Demo.cpp
db/flyway/: init.sql
docs/: arch.odp
include/: Controller.h  Global.h  Repository.h  RequestHandler.h  RequestHandlerFactory.h  ServerApp.h
src/: Controller.cpp  Main.cpp  Repository.cpp  RequestHandler.cpp  Test.cpp
